# padaria-delivery

./: .gitignore  README.md  pyproject.toml
padaria/: settings.py  urls.py
padaria/core/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
padaria/core/migrations/: 0001_initial.py  0002_alter_clientmodel_options_alter_productmodel_options_and_more.py  0002_alter_salemodel_order_number.py  0003_alter_productmodel_options_salemodel_total.py  0004_alter_salemodel_client.py  0005_salemodel_value_sale.py
padaria/core/static/css/: style.css
padaria/core/static/js/: script.js
padaria/core/templates/: base.html  detail.html  home.html  product_list.html  register.html  register_client.html  register_product.html  wish_list.html
